# ppar-project

./: Makefile  README.md  gmon.out  harmonics.c  harmonics.h  model  model.csv  model_par  model_par.c  trucquonpeutfaire.txt  validate  validate.c
normal/: Makefile  harmonics.c  model.c
par/: CMakeLists.txt  Makefile  harmonics.c  model_par.c  model_par2.c  model_par3.c  model_par4.c
